@@ -1,3 +1,9 @@
+lilv (0.24.9) unstable;
+
+  * Make lilv_world_get() use translations
+
+ -- David Robillard <d@drobilla.net>  Sun, 17 May 2020 18:44:04 +0000
+
 lilv (0.24.8) stable;
 
   * Allow passing strings for URIs in Python API when unambiguous
